# horus

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  conan.profile  conanfile.txt  readme.md  settings.md
res/: draw.effect  horus.effect  kill.cmd  scan.effect
res/img/: is_outline_v0_1.afphoto
src/: demo.cpp  kill.cpp  main.cpp  main.manifest  main.rc  terminate.cpp
src/anubis/: mouse.cpp  mouse.hpp
src/horus/: config.hpp  eye.cpp  eye.cu  eye.hpp  game.cpp  game.hpp  hero.cpp  hero.hpp  hid.cpp  hid.hpp  log.cpp  log.hpp  mouse.cpp  mouse.hpp  mulxp_hash.hpp  obs.cpp  obs.hpp  plugin.cpp  scan.cpp  scan.hpp  sound.cpp  sound.hpp  timer.hpp  token.hpp
src/horus/hero/: ana.hpp  ashe.hpp  base.hpp  brigitte.hpp  hitscan.hpp  pharah.hpp  reaper.hpp
